It is now possible to edit a competition and to block new registretions for a competition.

--- a/Poengrenn.Web/src/app/_shared/components/date-selector/date-selector.component.html
+++ b/Poengrenn.Web/src/app/_shared/components/date-selector/date-selector.component.html
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="p-2">
-    <ngb-timepicker [(ngModel)]="timeTemp" [meridian]="meridian" [spinners]="true" [size]="timeSize"></ngb-timepicker>
+    <ngb-timepicker [(ngModel)]="timeTemp" [meridian]="meridian" [spinners]="true" [size]="timeSize" (ngModelChange)="modelChange()"></ngb-timepicker>
   </div>
 </div>
