--- a/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.scss
+++ b/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.scss
@@ -9,3 +9,9 @@
 .input-group-btn:not(:first-child) > .btn {
     margin-right: 10px;
 }
+
+.status {
+    font-size: 12pt;
+    font-weight: bold;
+    color: #3388bd;
+}
