--- a/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.scss
+++ b/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.scss
@@ -15,3 +15,13 @@
     font-weight: bold;
     color: #3388bd;
 }
+
+.related-persons-list {
+    display: inline;
+    .list-inline-item:after {
+        content: ', ';
+    }
+    .list-inline-item:last-child:after {
+        content: '';
+    }
+}
