--- a/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.scss
+++ b/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.scss
@@ -6,6 +6,10 @@
     margin-left: 0;
 }
 
+.list-group-item {
+    padding: 0.2rem 1.25rem;
+}
+
 .input-group-btn:not(:first-child) > .btn {
     margin-right: 10px;
 }
