Show warning when registering results on future competitions

--- a/Poengrenn.Web/src/app/competition/competition-details/register-competition-results-modal/register-competition-results-modal.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/register-competition-results-modal/register-competition-results-modal.component.html
@@ -14,7 +14,9 @@
       {{c?.navn}}
     </option>
   </select>-->
-
+  <div *ngIf="warning" class="alert alert-danger">
+    {{warning}}
+  </div>
   <form #registerResultsForm="ngForm" (keyup.enter)="saveParticipantResult()" class="">
     
     <div class="form-group" *ngIf="currentParticipant">
