Only display related persons on active competitions
And by active I mean not done, active is another flag it seems

--- a/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.html
+++ b/Poengrenn.Web/src/app/competition/competition-details/competition-details.component.html
@@ -10,7 +10,7 @@
     <h6 class="card-subtitle mb-2 text-muted">{{competition?.dato | amDateFormat:'DD.MM.YYYY'}} kl. {{competition?.dato | amDateFormat:'HH:mm'}}</h6>
 
 
-    <div *ngIf="isLoggedIn()" class="text-warning">
+    <div *ngIf="isLoggedIn() && !isDone" class="text-warning">
       <p *ngIf="isAdmin()">Du er admin og kan melde på alle</p>
       <div *ngIf="!isAdmin()">
         <span>Du har rettigheter til å melde på:</span>
